--- a/microservice-books.properties
+++ b/microservice-books.properties
@@ -1,3 +1,6 @@
+server.port=9001
+myconfig.limitBooksInCategoryBookList: 3
+
 #Eureka
 eureka.client.serviceUrl.defaultZone= http://localhost:9102/eureka/
 
